after that i run my app and it gives me waring then inside properties i put ssl port into comment and run my app again and its working.

--- a/ManpreetBookStore/Properties/launchSettings.json
+++ b/ManpreetBookStore/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:18592",
-      "sslPort": 44326
+     // "sslPort": 44326
     }
   },
   "profiles": {
