--- a/ManpreetBookStore/ManpreetBookStore.csproj
+++ b/ManpreetBookStore/ManpreetBookStore.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManpreetBooks.DataAccess\ManpreetBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\ManpreetBooks.Models\ManpreetBooks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
