--- a/ManpreetBookStore/ManpreetBookStore.csproj
+++ b/ManpreetBookStore/ManpreetBookStore.csproj
@@ -14,12 +14,20 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ManpreetBooks.DataAccess\ManpreetBooks.DataAccess.csproj" />
     <ProjectReference Include="..\ManpreetBooks.Models\ManpreetBooks.Models.csproj" />
     <ProjectReference Include="..\ManpreetBooks.Utility\ManpreetBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Customer\Controllers\" />
+    <Folder Include="Areas\Customer\Data\" />
+    <Folder Include="Areas\Customer\Models\" />
+    <Folder Include="Areas\Customer\Views\" />
   </ItemGroup>
 
 </Project>
