--- a/ManpreetBooks.DataAccess/ManpreetBooks.DataAccess.csproj
+++ b/ManpreetBooks.DataAccess/ManpreetBooks.DataAccess.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Folder Include="Data\"/>
+		<Folder Include ="Repository\IRepository\"/>
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ManpreetBooks.Models\ManpreetBooks.Models.csproj" />
     <ProjectReference Include="..\ManpreetBooks.Utility\ManpreetBooks.Utility.csproj" />
