--- a/ManpreetBookStore/ManpreetBookStore.csproj
+++ b/ManpreetBookStore/ManpreetBookStore.csproj
@@ -29,6 +29,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
