--- a/ManpreetBookStore/ManpreetBookStore.csproj
+++ b/ManpreetBookStore/ManpreetBookStore.csproj
@@ -32,4 +32,8 @@
     <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
